update layout and fix text overflow

--- a/htmlCss/style.css
+++ b/htmlCss/style.css
@@ -96,19 +96,33 @@ body {
 
 /* ===== SECTIONS ===== */
 section {
-  padding: 5rem 1.5rem;
-  max-width: 1100px;
+  padding: 7rem 1.5rem;
+  max-width: 1000px;
   margin: auto;
 }
 
 section h3 {
-  font-size: 1.6rem;
+  font-size: 2rem;
   margin-bottom: 1rem;
 }
+
+
+  .hero h2 {
+    font-size: 2rem;
+  }
 
 .about p {
   color: #94a3b8;
   max-width: 600px;
+  font-size: 1.5rem;
+}
+
+img {
+  width: 100%;
+  height: 60vh;
+  object-fit: cover;
+  border-radius: 12px;
+  background: rgba(255,255,255,0.2);
 }
 
 /* ===== CARDS ===== */
@@ -152,9 +166,5 @@ section h3 {
 @media (max-width: 768px) {
   .card-wrapper {
     flex-direction: column;
-  }
-
-  .hero h2 {
-    font-size: 2rem;
   }
 }
